# piper

./: .gitignore  .gitmodules  README.md  __init__.py  build_installer.py  build_piper_installer.bat  build_piper_installer.py  build_piper_installer.spec  piper_config.py
core/dcc/: houdini.py  main.py  maya.py
houdini/otls/: curveFromCrossSection.hdalc
houdini/python2.7libs/: pythonrc.py  setup.py
houdini/python3.9libs/: pythonrc.py  setup.py
maya/cpp/: README.md
maya/cpp/Source/: CMakeLists.txt  MainPlugin.cpp  PiperFK.cpp  PiperFK.h  PiperIK.cpp  PiperIK.h  PiperMath.cpp  PiperMath.h  PiperTransforms.cpp  PiperTransforms.h  SwingTwistNode.cpp  SwingTwistNode.h  TensionNode.cpp  TensionNode.h  util.h
maya/cpp/Source/cmake/Modules/: FindMaya.cmake
maya/plug-ins/: Piper2020.mll
maya/plug-ins/2020/: CharcoalEditor.mll  Piper.mll
maya/plug-ins/2022/: Piper.mll
maya/plug-ins/2023/: Piper.mll
maya/plug-ins/2024/: Piper.mll
maya/scenes/: NorrskenPBR.mb
maya/scripts/: AEtensionNodeTemplate.mel  setup.py  userSetup.py
mayacpp/Source/: CMakeLists.txt  MainPlugin.cpp  PiperIK.cpp  PiperIK.h  PiperTransforms.cpp  PiperTransforms.h
pipe/: dcc.py  houdini_dcc.py  maya_dcc.py  maya_install.py  util.py
piper/: __init__.py  test.py
piper/config/: __init__.py  houdini.py  maya.py  unreal.py
piper/core/: README.md  __init__.py  build_installer.md  dcc.py  events.py  fbx_sdk.py  filer.py  houdini_dcc.py  houdini_install.py  maya_dcc.py  maya_install.py  namer.py  pather.py  perforce.py  pipermath.py  pythoner.py  settings.py  store.py  unreal_install.py  util.py  vendor.py
piper/core/dcc/: __init__.py  bundle.py  houdini_dcc.py  maya_dcc.py  unreal_dcc.py
piper/core/dcc/template/: export.py  paths.py  widget.py  widget_qt.py  widget_tk.py
piper/core/install/: __init__.py  houdini_install.py  maya_install.py  unreal_install.py
piper/mayapy/: __init__.py  attribute.py  convert.py  graphics.py  health.py  hierarchy.py  manipulator.py  mayamath.py  mesh.py  mirror.py  modifier.py  pipermath.py  pipernode.py  plugin.py  selection.py  settings.py  util.py
piper/mayapy/animation/: __init__.py  bookmark.py  key.py  resolution.py
piper/mayapy/pipe/: export.py  fbxpreset.py  paths.py  perforce.py  store.py
piper/mayapy/rig/: __init__.py  bone.py  build.py  control.py  core.py  createshape.py  curve.py  organizer.py  skin.py  space.py  switcher.py  xform.py
piper/mayapy/ui/: __init__.py  browser.py  clipper.py  menu.py  projects.py  switcher.py  util.py  vert_selector.py  widget.py  window.py
piper/ui/: __init__.py  browser.py  clipper.py  installer.py  menu.py  projects.py  switcher.py  vert_selector.py  widget.py
piper/unrealpy/: animation.py  blendspace.py  browser.py  copier.py  metadata.py  paths.py  pipe.py  settings.py  store.py  util.py
piper/unrealpy/ui/: __init__.py  menu.py  widget.py
plug-ins/: Piper2020.mll
presets/: default.fbxexportpreset  piperMesh.fbxexportpreset
scripts/: setup.py  userSetup.py
textures/: README.md
unreal/Piper/: Piper.uplugin
unreal/Piper/Content/Python/: init_unreal.py  setup.py
unreal/scripts/: init_unreal.py  setup.py
